<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Mega Apps!</string>

    <string name="spotify_streamer_button">Spotify Streamer</string>
    <string name="scores_app_button">Scores App</string>
    <string name="library_app_button">Library App</string>
    <string name="build_bigger_button">Build Bigger</string>
    <string name="xyz_reader_button">XYZ Reader</string>
    <string name="capstone_button">Capstone: My Own App</string>

    <string name="spotify_message">This button will launch Spotify Streamer app!</string>
    <string name="scores_message">This button will launch Scores app!</string>
    <string name="library_message">This button will launch Library app!</string>
    <string name="build_bigger_message">This button will launch Build Bigger app!</string>
    <string name="xyz_message">This button will launch XYZ Reader app!</string>
    <string name="capstone_message">This button will launch my Capstone app!</string>



    <string name="action_settings">Settings</string>
</resources>
