<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#F9FBE7">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="24sp"
        android:textColor="#827717"
        android:autoText="false"
        android:layout_gravity="left"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_button"
        android:id="@+id/spotify_stream_button"
        android:layout_below="@+id/title"
        android:layout_marginTop="43dp"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:onClick="showMessage"
        android:tag="@string/spotify_message"
        android:layout_marginBottom="20dp"
        android:background="#D4E157" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_button"
        android:id="@+id/scores_app_button"
        android:layout_below="@+id/spotify_stream_button"
        android:layout_alignLeft="@+id/spotify_stream_button"
        android:layout_alignStart="@+id/spotify_stream_button"
        android:layout_alignRight="@+id/spotify_stream_button"
        android:layout_alignEnd="@+id/spotify_stream_button"
        android:onClick="showMessage"
        android:tag="@string/scores_message"
        android:layout_marginBottom="20dp"
        android:background="#D4E157" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app_button"
        android:id="@+id/library_app_button"
        android:layout_below="@+id/scores_app_button"
        android:layout_alignLeft="@+id/scores_app_button"
        android:layout_alignStart="@+id/scores_app_button"
        android:layout_alignRight="@+id/scores_app_button"
        android:layout_alignEnd="@+id/scores_app_button"
        android:onClick="showMessage"
        android:tag="@string/library_message"
        android:layout_marginBottom="20dp"
        android:background="#D4E157" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_bigger_button"
        android:id="@+id/build_bigger_button"
        android:layout_below="@+id/library_app_button"
        android:layout_alignLeft="@+id/library_app_button"
        android:layout_alignStart="@+id/library_app_button"
        android:layout_alignRight="@+id/library_app_button"
        android:layout_alignEnd="@+id/library_app_button"
        android:onClick="showMessage"
        android:tag="@string/build_bigger_message"
        android:layout_marginBottom="20dp"
        android:background="#D4E157" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_button"
        android:id="@+id/xyz_button"
        android:layout_below="@+id/build_bigger_button"
        android:layout_alignLeft="@+id/build_bigger_button"
        android:layout_alignStart="@+id/build_bigger_button"
        android:layout_alignRight="@+id/library_app_button"
        android:layout_alignEnd="@+id/library_app_button"
        android:onClick="showMessage"
        android:tag="@string/xyz_message"
        android:layout_marginBottom="20dp"
        android:background="#D4E157" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/xyz_button"
        android:layout_alignLeft="@+id/xyz_button"
        android:layout_alignStart="@+id/xyz_button"
        android:layout_alignRight="@+id/library_app_button"
        android:layout_alignEnd="@+id/library_app_button"
        android:onClick="showMessage"
        android:tag="@string/capstone_message"
        android:background="#9E9D24" />

</RelativeLayout>
